Removed trivial dependence on Java 1.5 API.  No need to break 1.4 for such a small code enhancement.